--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div
-			class="flex justify-center bg-slate-200 min-h-screen p-2"
+			class="flex justify-center bg-weddingPrimary min-h-screen p-2"
 			id="root"
 		></div>
 		<script type="module" src="/src/main.jsx"></script>
